Responsive - Alignement issue to correct

--- a/style.css
+++ b/style.css
@@ -104,17 +104,20 @@ nav{
 	font-family: 'Inconsolata', monospace;
 	border: none;
 	color: white;
-	margin: 30px 0px 0px 30px;
+	margin: 30px 30px 30px 30px;
+	align-items: center;
 }
 
 .cover{
 	flex: 1;
+	height: 40vh;
 }
 
 .cover img{
-	height: 40vh;
+	height: 100%;
 	filter: drop-shadow( 0px 5px 3px black);
 	animation: drop 1.5s ease;
+	margin: auto;
 }
 
 .big-circle{
@@ -160,5 +163,40 @@ nav{
 	100%{
 		opacity: 1;
 		transform: translateY(0);
+	}
+}
+
+
+@media screen and (max-width: 1024px){
+	.presentation{
+		flex-direction: column;
+	}
+	.introduction{
+		margin-top: 5vh;
+		text-align: center;
+	}
+	.intro-text h1{
+		font-size: 30px;
+	}
+	.intro-text p{
+		font-size: 18px;
+	}
+	.cta{
+		padding: 10px 0px 0px 0px;
+	}
+	.laptop-select{
+		bottom: 5%;
+		right: 50%;
+		width: 50%;
+		transform: translate(50%, 5%);
+	}
+	.cover img{
+		height: 80%;
+		margin: auto;
+	}
+	.small-circle,
+	.mid-circle,
+	.big-circle{
+		opacity: 0.2;
 	}
 }
